test retrieval ok

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
   <div id="app">
     <ul id="words"></ul>
+    <p id="story"></p>
+    <ul id="dictionary"></ul>
   </div>
 </body>
 </html>
