dump parsed data to app

--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 </head>
 <body>
   <div id="app">
-    <ul id="words"></ul>
-    <p id="story"></p>
-    <ul id="dictionary"></ul>
+    <h1>Forbes Code Challenge</h1>
+    <section id="words">
+      <h2>Words</h2>
+      <ul></ul>
+    </section>
+    <section id="story">
+      <h2>Story</h2>
+      <p></p>
+    </section>
+    <section id="dictionary">
+      <h2>Dictionary</h2>
+      <ul></ul>
+    </section>
   </div>
 </body>
 </html>
