convert words list to table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
     <h1>Forbes Code Challenge</h1>
     <section id="words">
       <h2>Words</h2>
-      <ul></ul>
+      <table>
+        <thead>
+          <tr>
+            <td>Misspelled</td>
+            <td>Best Match</td>
+            <td>Match %</td>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
     </section>
     <section id="story">
       <h2>Story</h2>
