--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 <body>
   <div id="app">
     <h1>Forbes Code Challenge</h1>
+    <section id="options">
+      <h2>Flags for Misspelling</h2>
+      <div>
+        <div class="input">
+          <input id="punctuation" name="punctuation" type="checkbox" checked />
+          <label for="punctuation">Punctuation Counts?</label>
+        </div>
+        <div class="input">
+          <input id="capitalization" name="capitalization" type="checkbox" checked />
+          <label for="capitalization">Capitalization Counts?</label>
+        </div>
+        <div class="input">
+          <button id="submit">Start</button>
+        </div>
+      </div>
+    </section>
     <section id="words">
       <h2>Words</h2>
       <table>
