--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <script src="string.js"></script>
+  <script src="view.js"></script>
+  <script src="fetch.js"></script>
   <script src="main.js"></script>
 
   <link rel="stylesheet" type="text/css" href="main.css" />
